--- a/docs/songwriting/10.md
+++ b/docs/songwriting/10.md
@@ -1,5 +1,10 @@
 # 10
 
+<audio controls preload="metadata">
+  <source src="../audio/10.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 We’ve been running around this town for awhile now,<br>
 At times I think I forgot how it feels,<br>
 To be humming tunes for you in my free time,<br>
