add line  breaks

--- a/docs/songwriting/38.md
+++ b/docs/songwriting/38.md
@@ -1,35 +1,35 @@
 # 38
 
-What's is all for?
-Spinning our wheels,
-Chasing down some shadow, 
-Of what we thought was real.
-Take a step back,
-Assess what's at the core,
-Trim off all the fat, 
-You'll end up with more.
+What's is all for?<br>
+Spinning our wheels,<br>
+Chasing down some shadow,<br>
+Of what we thought was real.<br>
+Take a step back,<br>
+Assess what's at the core,<br>
+Trim off all the fat,<br>
+You'll end up with more.<br>
 
-Let it all go,
-The shape of what you know,
-Crumbles to the floor,
-When you release your ego,
-Time it flies by,
-And the memories fade away,
-But the ones that made your mold, 
-Feels just like yesterday.
+Let it all go,<br>
+The shape of what you know,<br>
+Crumbles to the floor,<br>
+When you release your ego,<br>
+Time it flies by,<br>
+And the memories fade away,<br>
+But the ones that made your mold,<br>
+Feels just like yesterday.<br>
 
-When it boils down,
-The greatest moments in life, 
-Are sights and sounds,
-I can see it know,
-Emotion rushes in and my heart pounds,
-It's pretty profound,
-That an image in my mind can heal me when I'm feeling down,
-I've finally come around,
-To letting go and holding on to all the moments I just can't live without.
+When it boils down,<br>
+The greatest moments in life,<br>
+Are sights and sounds,<br>
+I can see it know,<br>
+Emotion rushes in and my heart pounds,<br>
+It's pretty profound,<br>
+That an image in my mind can heal me when I'm feeling down,<br>
+I've finally come around,<br>
+To letting go and holding on to all the moments I just can't live without.<br>
 
-Time is only ours,
-If we take it and run at the stars,
-It's a single shot, and I'm not missing out on this one.
+Time is only ours,<br>
+If we take it and run at the stars,<br>
+It's a single shot, and I'm not missing out on this one.<br>
 
 Copyright &copy; 2022 Abram Kline
